docs: fase3 i fase5 actualitzats amb Godot + README final